--- a/docs/style.css
+++ b/docs/style.css
@@ -173,13 +173,20 @@ img {
 }
 
 /* HEADER */
+/* HEADER */
 .header {
   padding: 0 3rem;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: 1s;
+  max-height: 100vh;
+}
+@media (max-width: 600px) {
+  .header {
+    height: auto; /* or any other suitable value for smaller screens */
+  }
 }
 
 .header__title {
